@@ -1,19 +1,21 @@
 <?xml version="1.0" ?>
 <project name="maven_test" xmlns:jacoco="antlib:org.jacoco.ant" >
+    <jacoco:angent property="-javaagent:/opt/jacoco-0.8.7/lib/]jacocoagent.jar=includes=*,output=tcpserver,port=8083,address=127.0.0.1,append=true -Xverify:none"/>
+    <!--源代码路径-->
+    <property name="sourcecode" value="/var/lib/jenkins/workspace/maven_test" />
     <!--JaCoCo的安装路径-->
     <property name="jacocoantPath" value="/opt/jacoco-0.8.7/lib/jacocoant.jar"/>
     <!--最终生成.exec文件的路径，JaCoCo就是根据这个文件生成最终的报告的-->
-    <property name="jacocoexecPath" value="../../../jacoco.exec"/>
+    <property name="jacocoexecPath" value="${sourcecode}/jacoco.exec"/>
     <!--生成覆盖率报告的路径-->
-    <property name="reportfolderPath" value="../../../report/"/>
+    <property name="reportfolderPath" value="${sourcecode}/report/"/>
     <!--远程tomcat服务或者应用的ip地址-->
     <property name="server_ip" value="127.0.0.1"/>
     <!--前面配置的远程tomcat服务或者应用打开的端口，要跟上面配置的一样-->
     <property name="server_port" value="8083"/>
-    <!--源代码路径-->
-    <property name="checkOrderSrcpath" value="../../../" />
+
     <!--.class文件路径-->
-    <property name="checkOrderClasspath" value="../../../target" />
+    <property name="Classpath" value="${sourcecode}/target" />
 
     <!--让ant知道去哪儿找JaCoCo-->
     <taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
@@ -24,7 +26,7 @@
         根据前面配置的ip地址，和端口号，
         访问目标tomcat服务或者应用，并生成.exec文件。-->
     <target name="dump">
-        <jacoco:dump address="${server_ip}" reset="false" destfile="${jacocoexecPath}" port="${server_port}" append="flase" />
+        <jacoco:dump address="${server_ip}" reset="true" destfile="${jacocoexecPath}" port="${server_port}" append="flase" />
     </target>
 
     <!--JaCoCo任务:
@@ -40,12 +42,12 @@
             </executiondata>
 
             <structure name="JaCoCo Report">
-                <group name="Check Order related">
+                <group name="output report">
                     <classfiles>
-                        <fileset dir="${checkOrderClasspath}" />
+                        <fileset dir="${Classpath}" />
                     </classfiles>
-                    <sourcefiles encoding="gbk">
-                        <fileset dir="${checkOrderSrcpath}" />
+                    <sourcefiles encoding="utf-8">
+                        <fileset dir="${sourcecode}" />
                     </sourcefiles>
                 </group>
             </structure>
